cmake_minimum_required(VERSION 3.12)
project(COMP_345_Project)

set(CMAKE_CXX_STANDARD 17)

add_executable(COMP_345_Project Part-1/Map.cpp Part-1/Map.h Drivers/Tests.cpp Drivers/Tests.h Part-2/MapLoader.cpp Part-2/MapLoader.h Part-5/core.h main.cpp Part-5/core.cpp Part-5/core.cpp Part-5/core.h Part-5/collections.h Part-5/constants.h)