cmake_minimum_required(VERSION 3.12)
project(COMP_345_Project)

set(CMAKE_CXX_STANDARD 17)

add_executable(COMP_345_Project Part-1/graphmap.h Part-1/graphmap.cpp Part-2/maploader.h Part-2/maploader.cpp Part-4/Player.h Part-4/Player.cpp Part-5/core.h Part-5/core.cpp Part-5/core.cpp Part-5/core.h Part-5/collections.h Part-5/constants.h main.cpp Part-3/dice.h Part-3/dicefacility.cpp)