cmake_minimum_required(VERSION 3.12)
project(COMP_345_Project)

set(CMAKE_CXX_STANDARD 17)

add_executable(COMP_345_Project Part-1/graphmap.h Part-1/graphmap.cpp Part-2/maploader.h Part-2/maploader.cpp Part-5-old/core.h Part-5-old/core.cpp Part-5-old/core.cpp Part-5-old/core.h Part-5-old/collections.h Part-5-old/constants.h main.cpp Part-3/dice.h Part-3/dicefacility.cpp Resources/dice_constants.h Part-5-old/controller.cpp Part-5-old/controller.h Part-5-old/interface.cpp Part-5-old/interface.h Part-5/building.h Part-5/building.cpp Part-5/buildingdeck.h Part-5/buildingdeck.cpp Part-5/card.h Part-5/card.cpp Part-5/carddeck.h Part-5/carddeck.cpp Part-5/monster.h Part-5/monster.cpp Part-5/monsterdeck.h Part-5/monsterdeck.cpp Part-5/token.h Part-5/token.cpp Part-5/tokendeck.h Part-5/tokendeck.cpp Part-4/player.h Part-4/player.cpp)